<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

        <item android:id="@+id/change_server_url"
            android:icon="@drawable/ic_edit_white_48dp"
            android:title="@string/change_server_url" />

        <item android:id="@+id/change_wait_time"
            android:icon="@drawable/ic_edit_white_48dp"
            android:title="@string/change_wait_time" />

        <item android:id="@+id/my_profile"
            android:icon="@drawable/ic_account_circle_white_48dp"
            android:title="@string/my_profile" />

        <item android:id="@+id/logout"
            android:icon="@drawable/ic_power_settings_new_white_48dp"
            android:title="@string/logout" />

        <item android:id="@+id/about_us"
            android:title="@string/about_us" />

        <item android:id="@+id/exit"
            android:title="@string/exit" />

</menu>