<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/exit"
        android:title="@string/exit"
        android:orderInCategory="200"
        app:showAsAction="never">
    </item>
    <item android:id="@+id/about_us"
        android:title="@string/about_us"
        android:orderInCategory="199"
        app:showAsAction="never">
    </item>
    <item android:id="@+id/change_server_url"
        android:title="@string/change_server_url"
        android:orderInCategory="198"
        app:showAsAction="never">
    </item>
    <item android:id="@+id/change_wait_time"
        android:title="@string/change_wait_time"
        android:orderInCategory="197"
        app:showAsAction="never">
    </item>
    <item android:id="@+id/my_profile"
        android:icon="@drawable/ic_account_circle_white_48dp"
        android:title="@string/my_profile"
        android:orderInCategory="98"
        app:showAsAction="ifRoom">
    </item>
    <item android:id="@+id/logout"
        android:icon="@drawable/ic_power_settings_new_white_48dp"
        android:title="@string/logout"
        android:orderInCategory="99"
        app:showAsAction="ifRoom">
    </item>
</menu>