<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="250dp"
    android:gravity="center_horizontal"
    android:layout_marginLeft="@dimen/login_margin"
    android:layout_marginRight="@dimen/login_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:layout_marginBottom="@dimen/activity_vertical_margin">

    <Spinner
        android:id="@+id/channelSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/select_channel"
        android:layout_margin="5dp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/enquiryTitleTextLayout"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:hint="@string/enquiry_title"
        android:background="@color/colorWhite"
        android:layout_margin="5dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textAutoComplete"
            android:imeOptions="actionDone"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/enquiryTextLayout"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:hint="@string/enquiry"
        android:background="@color/colorWhite"
        android:layout_margin="5dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"
            android:inputType="textMultiLine"
            android:lines="8"
            android:imeOptions="actionDone"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:text="@string/submit"
        android:id="@+id/submitButton"
        style="@style/ButtonStyle"/>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/enquiryProgressBar"
        android:visibility="gone"/>

</LinearLayout>